endret litt på navbar. position fixed til relative og text-align: center;

--- a/Site/CSS/style.css
+++ b/Site/CSS/style.css
@@ -65,6 +65,10 @@ p {
 
 
 /* CSS booking.html*/
+.booking_content{
+  position: relative;
+  top: 100px;
+}
 .booking-form label {
     display: block;
     font-size: 20px;
@@ -137,7 +141,7 @@ p {
   width: 100%;
   background-color: #fce5cdff;
   display: inline-block;
-  padding-left: 20%;
+  text-align: center;
 }
 
 #navbar a {
